# pydatalib2

./: .gitignore  AUTHORS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pylint.yml  python-package.yml
core/string_utils/: error_handlings.py  regex_strings.py  string_validation.py
src/PyDataLib2/string_utils/: error_handlings.py  regex_strings.py  string_validation.py
src/pydatalib2/string_utils/: __init__.py  exceptions.py  regex_strings.py  string_validation.py
tests/: test_string_validation.py  unittest.py
tools/: pycode_inspect.py
