[metadata]
name = PyDataLib2
version = 0.0.2
author = Suresh_Nithesh
author_email = nitheshkg18@gmail.com
description = A simple Python package for basic validations
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/sureshchandras3kar/PyDataLib2
project_urls =
    Bug Tracker = https://github.com/sureshchandras3kar/PyDataLib2/issues
    repository = https://github.com/sureshchandras3kar/PyDataLib2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = core
packages = find:
python_requires = >=3.6

[options.packages.find]
where = core