[metadata]
name = PyDataLib2
version=0.0.3
author = SureshChandraSekar
author_email = sureshchandrasekar97@gmail.com
description = PyDataLib2 is a Python utilities igniting innovation and efficiency in development.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/sureshchandras3kar/PyDataLib2
project_urls =
    Bug Tracker = https://github.com/sureshchandras3kar/PyDataLib2/issues
    repository = https://github.com/sureshchandras3kar/PyDataLib2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = utilities, development, efficiency

[options]
package_dir = src
packages = find:
python_requires = >=3.6
include_package_data = true

[options.packages.find]
where = src
license = Apache License 2.0
