[metadata]
name = pydatalib2
version=0.0.3
author = SureshChandraSekar
author_email = sureshchandrasekar97@gmail.com
description = pydatalib2 is a Python utilities igniting innovation and efficiency in development.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/sureshchandras3kar/pydatalib2
project_urls =
    Bug Tracker = https://github.com/sureshchandras3kar/pydatalib2/issues
    repository = https://github.com/sureshchandras3kar/pydatalib2
classifiers =
    'Development Status ::  1 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Apache License 2.0',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities'
keywords = utilities, development, efficiency

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = true

[options.packages.find]
where = src
license = Apache License 2.0
